kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: companysearch
  labels:
    app.kubernetes.io/name: companysearch
